package seedu.address.model.person;

import java.util.ArrayList;
import java.util.Collections;
import java.util.HashSet;
import java.util.List;
import java.util.Objects;
import java.util.Set;

import seedu.address.commons.util.ToStringBuilder;
import seedu.address.model.tag.Tag;

/**
 * Represents a Person in the address book.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Person {

    // Identity fields
    private final Name name;
    private final Phone phone;
    private final Email email;
    private final List<String> interviewIds;

    // Data fields
    private final Address address;
    private final Set<Tag> tags = new HashSet<>();

    /**
     * Every field must be present and not null.
     */
    public Person(Name name, Phone phone, Email email, Address address, Set<Tag> tags) {
        this(name, phone, email, address, tags, List.of());
    }

    /**
     * Every field must be present and not null. New constructor that adds the interviewIds field.
     */
    public Person(Name name, Phone phone, Email email, Address address,
                  Set<Tag> tags, List<String> interviewIds) {

        this.name = name;
        this.phone = phone;
        this.email = email;
        this.address = address;

        this.tags.addAll(tags);
        this.interviewIds = interviewIds;
    }

    public Name getName() {
        return name;
    }

    public Phone getPhone() {
        return phone;
    }

    public Email getEmail() {
        return email;
    }

    public Address getAddress() {
        return address;
    }

    /**
     * Returns an immutable tag set, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public Set<Tag> getTags() {
        return Collections.unmodifiableSet(tags);
    }

    /**
     * Returns an immutable interviewId list, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public List<String> getInterviewIds() {
        return Collections.unmodifiableList(interviewIds);
    }

    /**
     * Returns a new Person with the given interview record added.
     */
    public Person addInterviewRecord(String interviewId) {
        List<String> updatedIds = new ArrayList<>(interviewIds);
        updatedIds.add(interviewId);
        return new Person(name, phone, email, address, tags, updatedIds);
    }

    /**
     * Returns a new Person with the given interview record index removed.
     */
    public Person removeInterviewId(String index) {
        List<String> updatedIds = new ArrayList<>(interviewIds);
        updatedIds.remove(index);
        return new Person(name, phone, email, address, tags, updatedIds);
    }

    /**
     * Returns a new Person with the given interview record index removed. (Overload)
     */
    public Person removeInterviewId(int index) {
        List<String> updatedIds = new ArrayList<>(interviewIds);
        updatedIds.remove(index);
        return new Person(name, phone, email, address, tags, updatedIds);
    }

    /**
     * Returns true if both persons have the same phone number.
     * This defines a weaker notion of equality between two persons.
     */
    public boolean isSamePerson(Person otherPerson) {
        if (otherPerson == this) {
            return true;
        }

        return otherPerson != null
                && otherPerson.getPhone().equals(getPhone());
    }

    /**
     * Returns true if both persons have the same identity and data fields.
     * This defines a stronger notion of equality between two persons.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof Person)) {
            return false;
        }

        Person otherPerson = (Person) other;
        return name.equals(otherPerson.name)
                && phone.equals(otherPerson.phone)
                && email.equals(otherPerson.email)
                && address.equals(otherPerson.address)
                && tags.equals(otherPerson.tags)
                && interviewIds.equals(otherPerson.interviewIds);
    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(name, phone, email, address, tags, interviewIds);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("name", name)
                .add("phone", phone)
                .add("email", email)
                .add("address", address)
                .add("tags", tags)
                .add("interviewRecordIds", interviewIds)
                .toString();
    }

}
