@startuml

interface Model

class ModelManager
class AddressBook
class UserPrefs
class Person {
  interviewIds : List<String>
}
class InterviewDatabase
class InterviewRecord {
  id : String
  notes : String
}
class UniquePersonList
class FilteredPersonList as "FilteredList<Person>"

ModelManager ..|> Model
ModelManager --> AddressBook
ModelManager --> UserPrefs
ModelManager --> FilteredPersonList

AddressBook --> "1" UniquePersonList
AddressBook --> "1" InterviewDatabase

UniquePersonList --> "*" Person
InterviewDatabase --> "*" InterviewRecord

@enduml

